@@ -473,6 +473,30 @@ qGaimWindowDestroy(GaimWindow *win)
 }
 
 static void
+qGaimWindowShow(GaimWindow *win)
+{
+	QGaimConvWindow *qwin = (QGaimConvWindow *)win->ui_data;
+
+	qwin->show();
+}
+
+static void
+qGaimWindowHide(GaimWindow *win)
+{
+	QGaimConvWindow *qwin = (QGaimConvWindow *)win->ui_data;
+
+	qwin->hide();
+}
+
+static void
+qGaimWindowRaise(GaimWindow *win)
+{
+	QGaimConvWindow *qwin = (QGaimConvWindow *)win->ui_data;
+
+	qwin->raise();
+}
+
+static void
 qGaimWindowSwitchConv(GaimWindow *win, unsigned int index)
 {
 	QGaimConvWindow *qwin = (QGaimConvWindow *)win->ui_data;
@@ -518,9 +542,9 @@ static GaimWindowUiOps winOps =
 	qGaimWindowGetConvUiOps,
 	qGaimWindowNew,
 	qGaimWindowDestroy,
-	NULL,
-	NULL,
-	NULL,
+	qGaimWindowShow,
+	qGaimWindowHide,
+	qGaimWindowRaise,
 	NULL,
 	qGaimWindowSwitchConv,
 	qGaimWindowAddConv,
@@ -535,25 +559,3 @@ qGaimGetConvWindowUiOps()
 	return &winOps;
 }
 
-QPopupMenu *
-qGaimBuildConvMenu()
-{
-	QPopupMenu *menu;
-	GaimConversation *conv;
-	GList *l;
-
-	menu = new QPopupMenu();
-
-	for (l = gaim_get_conversations(); l != NULL; l = l->next)
-	{
-		conv = (GaimConversation *)l->data;
-
-		gaim_debug(GAIM_DEBUG_INFO, "qGaimBuildConvMenu",
-				   "Adding %s\n",
-				   gaim_conversation_get_title(conv));
-
-		menu->insertItem(gaim_conversation_get_title(conv));
-	}
-
-	return menu;
-}
