@@ -1,3 +1,8 @@
+Mon Jul 14 04:24:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	  - Added UI ops for conversation window show, hide, and raise.
+
 Mon Jul 14 02:41:27 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
